--- a/fabric_setup/group_vars/all.yml
+++ b/fabric_setup/group_vars/all.yml
@@ -4,7 +4,7 @@ switches:
     interfaces:
       lo:
         ipv4: 10.0.0.21/32
-      fabriclinks: swp1-4, swp29-30
+      fabriclinks: swp1-4,swp29-30
       peerlinks: swp31-32
     bgp_as: 65020
 
@@ -12,7 +12,7 @@ switches:
     interfaces:
       lo:
         ipv4: 10.0.0.22/32
-      fabriclinks: swp1-4, swp29-30
+      fabriclinks: swp1-4,swp29-30
       peerlinks: swp31-32
     bgp_as: 65020
 
@@ -41,7 +41,9 @@ switches:
         - 00:00:5e:ff:01:00
       l3_vni_mac: 44:38:39:ff:00:12
       server_vlan: 10
-    VRF: TENANT-A
+    VRF:
+      - TENANT-A
+      - TENANT-A
     clag_role: primary
     clag_sys_mac: 44:38:39:ff:00:12
     bgp_as: 65011
@@ -71,7 +73,9 @@ switches:
         - 00:00:5e:ff:01:00
       l3_vni_mac: 44:38:39:ff:00:12
       server_vlan: 10
-    VRF: TENANT-A
+    VRF:
+      - TENANT-A
+      - TENANT-A
     clag_role: secondary
     clag_sys_mac: 44:38:39:ff:00:12
     bgp_as: 65012
@@ -101,7 +105,9 @@ switches:
         - 00:00:5e:ff:01:00
       l3_vni_mac: 44:38:39:ff:00:34
       server_vlan: 20
-    VRF: TENANT-A
+    VRF:
+      - TENANT-A
+      - TENANT-A
     bgp_as: 65013
 
   leaf04:
@@ -124,6 +130,7 @@ switches:
       serverlinks: swp1
       l3_vni_mac: 44:38:39:ff:00:56
       swp44_ip: 172.16.1.2/30
+      server_vlan: 10
     VRF: TENANT-A
     clag_role: primary
     clag_sys_mac: 44:38:39:ff:00:56
@@ -140,6 +147,7 @@ switches:
       serverlinks: swp1
       l3_vni_mac: 44:38:39:ff:00:56
       swp44_ip: 172.16.2.2/30
+      server_vlan: 10
     VRF: TENANT-A
     clag_role: secondary
     clag_sys_mac: 44:38:39:ff:00:56
